# OS-Project---Linux-Task-Manager

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/process/: data.rs  display.rs  mod.rs
src/tui/: event.rs  layout.rs  mod.rs  render.rs
