[package]
name = "the_process_manager"
version = "0.1.0"
edition = "2021"
license = "AUC"
description = "A TUI-based process manager built with Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procfs = "0.15.1"
tui = "0.19"
crossterm = "0.26"
sysinfo = "0.21"
chrono = "0.4"

[package.metadata.deb]
maintainer = "Mohamed Abdel-Hamid <moh.aymann@aucegypt.edu>"
copyright = "2024, Mohamed Abdel-Hamid <moh.aymann@aucegypt.edu>"
extended-description = """A Linux Task Manager based on Rust!"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
 ["target/release/the_process_manager", "usr/bin/", "755"],
]
